# PyRobotics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  main_loop.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
Localization/: README_CN.md  ekf_localizer.py  fusion_localizer.py  pf_localizer.py
Mapping/: README_CN.md
MissionPlanning/: README_CN.md
PathPlanning/: README_CN.md  a_star_planner.py  dwa_planner.py  planner_selector.py  rrt_planner.py
PathTracking/: README_CN.md  controller_selector.py  fuzzy_controller.py  mpc_controller.py  pure_pursuit_controller.py  rl_controller.py  stanley_controller.py
SLAM/: README_CN.md  fast_slam.py  icp_matching.py  slam_pipeline.py
control/: dqn_weights.npz
decision/: README_CN.md  multi_agent.py  obstacle_avoidance.py  path_smoother.py  task_scheduler.py
docs/: api_reference.md  architecture.md  capture_gifs.py  capture_screenshots.py  gen_visuals.py  quick_start.md
perception/: README_CN.md  lane_pixel_detector.py  obstacle_detector.py  obstacle_tracker.py  sensor_fusion.py  sign_recognizer.py
proto/: agent.proto  common.proto  control.proto  decision.proto  perception.proto  system.proto
requirements/: requirements.txt
system/: README_CN.md  vehicle_sim.py
system/embedded/inc/: fixed_point.h  localization.h  lookup_table.h  pid.h  slam_config.h  stanley.h  vehicle_control.h
system/embedded/src/: ekf_localize.c  lookup_table.c  pid.c  slam_core.c  stanley.c  vehicle_control.c
system/realtime/: latest_value.py  realtime_pipeline.py
system/ros2/smart_car_control_system/: package.xml  setup.cfg  setup.py
system/ros2/smart_car_control_system/launch/: system.launch.py
system/ros2/smart_car_control_system/smart_car_control_system/: control_node.py  perception_node.py  planning_node.py
system/ros2/smart_car_interfaces/: CMakeLists.txt  package.xml
system/ros2/smart_car_interfaces/msg/: ControlOutput.msg  DecisionOutput.msg  Header.msg  Landmark.msg  Observation.msg  Obstacle.msg  PathPoint.msg  PerceptionOutput.msg  RoadBoundary.msg  SteeringCommand.msg  SystemCommand.msg  TargetObject.msg  ThrottleCommand.msg  VehicleFeedback.msg
tests/: localization_slam_viz_test.py  racing_benchmark.py  racing_demo.py  test_all_modules.py  test_rmse.py  visual_test.py
utils/: angle.py  geometry.py  plot.py
