[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobotics"
version = "1.0.0"
description = "Intelligent vehicle autonomous driving software stack with four-layer architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PyRobotics Contributors"},
]
keywords = ["autonomous-driving", "robotics", "slam", "path-planning", "path-tracking", "localization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "opencv-python>=4.5",
    "scikit-learn>=1.0",
    "protobuf>=4.21",
    "grpcio-tools>=1.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = [
    "perception*",
    "decision*",
    "PathPlanning*",
    "PathTracking*",
    "Localization*",
    "SLAM*",
    "utils*",
    "system*",
    "generated*",
]
exclude = ["tests*", "docs*", "figs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
select = ["F", "E", "W", "UP"]
ignore = ["E501", "E741", "E402"]
exclude = ["generated"]
target-version = "py39"

[tool.mypy]
ignore_missing_imports = true
exclude = ["generated/"]
